# XRechnung

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  validateGeneratedXmlFiles.sh
.github/workflows/: main.yml
libraries/libsaxon-HEC-windows-12.5.0/: README.md
libraries/libsaxon-HEC-windows-12.5.0/Saxon.C.API/: CythonExceptionHandler.cpp  CythonExceptionHandler.h  DocumentBuilder.cpp  DocumentBuilder.h  SaxonApiException.cpp  SaxonApiException.h  SaxonCGlue.c  SaxonCGlue.h  SaxonCProcessor.c  SaxonCProcessor.h  SaxonCXPath.c  SaxonCXPath.h  SaxonProcessor.cpp  SaxonProcessor.h  SchemaValidator.cpp  SchemaValidator.h  XPathProcessor.cpp  XPathProcessor.h  XQueryProcessor.cpp  XQueryProcessor.h  XdmArray.cpp  XdmArray.h  XdmAtomicValue.cpp  XdmAtomicValue.h  XdmFunctionItem.cpp  XdmFunctionItem.h  XdmItem.cpp  XdmItem.h  XdmMap.cpp  XdmMap.h  XdmNode.cpp  XdmNode.h  XdmValue.cpp  XdmValue.h  Xslt30Processor.cpp  Xslt30Processor.h  XsltExecutable.cpp  XsltExecutable.h  config.m4  config.w32  (+11 more)
libraries/libsaxon-HEC-windows-12.5.0/libs/win/: libsaxon-hec-12.5.0.lib
src/: CMakeLists.txt  XRechnungAllowanceChargeCode.hpp  XRechnungEASCode.hpp  XRechnungPaymentMeansCode.hpp  XRechnungProp.hpp  XRechnungValidator.hpp
src/XRechnung/: CMakeLists.txt  XRechnung.cpp  XRechnung.hpp  XRechnungChargeReasonCode.hpp  XRechnungCountryCode.hpp  XRechnungCurrencyCode.hpp  XRechnungEASCode.hpp  XRechnungMapping.hpp  XRechnungMeasureUnit.hpp  XRechnungProp.hpp  XRechnungSerializer.cpp  XRechnungSerializer.hpp  XRechnungUtils.hpp
src/tests/: CMakeLists.txt  main.cpp  minimalRequiredTests.cpp  subInvoiceLineTests.cpp  utils.hpp  utilsTests.cpp  withChargesTests.cpp  withDiscountsTests.cpp
